--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ models\__pycache__\
 
 services/__pycache__/
 services\__pycache__\
+
+visuals/__pycache__/
+visuals\__pycache__\
+
+styles/__pycache__/
+styles\__pycache__\
