--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,7 @@ visuals\__pycache__\
 styles/__pycache__/
 styles\__pycache__\
 
+backup/data.yaml
 backup/data.yaml/
 backup\data.yaml\
+backup\data.yaml
